clusters/home/apps/robopd2/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: robopd2-api
  namespace: robopd2
  labels:
    app: robopd2-api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: robopd2-api
